--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYMENT=/home/user/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-    - /bin/cp script.js $DEPLOYPATH
+    - export DEPLOYPATH=/home/ui0it7ugrg9a/public_html/
+    - /bin/cp -R * $DEPLOYPATH
